--- a/IpSocketToolBar/IpSocketToolBar.csproj
+++ b/IpSocketToolBar/IpSocketToolBar.csproj
@@ -45,6 +45,7 @@
     <Compile Include="TcpClientTrx.cs" />
     <Compile Include="TcpServerTrx.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TcpTranceiver.cs" />
     <Compile Include="UdpReceiver.cs" />
     <Compile Include="UdpSender.cs" />
   </ItemGroup>
