implement PacketPayload class and add tests

--- a/TestApp/TestApp.csproj
+++ b/TestApp/TestApp.csproj
@@ -104,6 +104,7 @@
       <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
+    <Compile Include="ProgressBarExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormTcpClient2.resx">
       <DependentUpon>FormTcpClient2.cs</DependentUpon>
